--- a/src/app/core/component/menu/menu.component.html
+++ b/src/app/core/component/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar sticky-top navbar-expand-lg">
   <div class="container-fluid">
     <svg
       id="logo"
