--- a/src/app/shared/component/create-item-dialog/create-item-dialog.component.html
+++ b/src/app/shared/component/create-item-dialog/create-item-dialog.component.html
@@ -1,39 +1,45 @@
 <div class="dialog">
   <div class="mx-4 my-4">
-    <div class="mb-3">
-      <label class="form-label" for="name">Item Name : </label>
-      <input
-        class="mt-2 form-control"
-        type="text"
-        [(ngModel)]="name"
-        id="name"
-      />
-    </div>
+    <form [formGroup]="itemForm">
+      <div class="mb-3">
+        <label class="form-label" for="name">Item Name : </label>
+        <input
+          class="mt-2 form-control"
+          type="text"
+          formControlName="name"
+          id="name"
+        />
+      </div>
 
-    <div class="mb-3">
-      <label class="form-label" for="quantity">Item Quantity : </label>
-      <input
-        class="mt-2 form-control"
-        type="number"
-        [(ngModel)]="quantity"
-        id="quantity"
-      />
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="min_quantity">Minimum Quantity : </label>
-      <input
-        class="mt-2 form-control"
-        type="number"
-        [(ngModel)]="min_quantity"
-        id="min_quantity"
-        min="0"
-        max="100"
-      />
-    </div>
-    <div class="d-grid">
-      <button class="btn btn-success mt-2" (click)="createItem()">
-        New Item
-      </button>
-    </div>
+      <div class="mb-3">
+        <label class="form-label" for="quantity">Item Quantity : </label>
+        <input
+          class="mt-2 form-control"
+          type="number"
+          formControlName="quantity"
+          id="quantity"
+          min="1"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="min_quantity">Minimum Quantity : </label>
+        <input
+          class="mt-2 form-control"
+          type="number"
+          formControlName="min_quantity"
+          id="min_quantity"
+          min="1"
+        />
+      </div>
+      <div class="d-grid">
+        <button
+          class="btn btn-success mt-2"
+          [disabled]="!itemForm.valid"
+          (click)="createItem()"
+        >
+          New Item
+        </button>
+      </div>
+    </form>
   </div>
 </div>
