--- a/src/app/modules/profile/profile/profile.component.html
+++ b/src/app/modules/profile/profile/profile.component.html
@@ -142,7 +142,7 @@
     <div class="d-grid gap-2 mb-2">
       <button
         type="button"
-        class="btn btn-success"
+        class="btn btn-primary"
         (click)="submit()"
         [disabled]="userForm.invalid"
       >
