--- a/src/app/shared/component/create-item-dialog/create-item-dialog.component.html
+++ b/src/app/shared/component/create-item-dialog/create-item-dialog.component.html
@@ -8,6 +8,7 @@
           type="text"
           formControlName="name"
           id="name"
+          [ngModel]="name"
         />
       </div>
 
