--- a/src/app/shared/component/edit-shelf/edit-shelf.component.html
+++ b/src/app/shared/component/edit-shelf/edit-shelf.component.html
@@ -11,6 +11,7 @@
           name="quantity"
           id="quantity"
           min="1"
+          max="5"
           formControlName="quantity"
         />
       </div>
